--- a/screen.css
+++ b/screen.css
@@ -5,6 +5,7 @@ body{
     font-family: Helvetica, sans-serif;
     border-top: 15px solid #424242;
     margin: 0 auto;
+    color: #363636;
 }
 
 main {
@@ -13,9 +14,7 @@ main {
 }
 
 .masthead {
-    background-image: url('images/mac.jpg');
-    background-size: cover;
-    background-position: bottom;
+    background: no-repeat bottom / cover url('images/mac.jpg');
     height: 250px;
     border-radius: 20px;
 }
@@ -29,13 +28,42 @@ main {
     flex-grow: 1;
     flex-basis: 0;
     background: #E9EAEC;
-    padding: 25px;
     border-radius: 20px;
     margin-top: 25px;
 }
 
+.details section p {
+    margin: 25px;
+}
+
+.details section h2 {
+    margin: 25px;
+}
+
+.details section.with-code {
+    padding: 0;
+}
+
+div.codehtml {
+    padding: 25px;
+    background: #424242;
+    color: #fff;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
 img {
     width: 100%;
+}
+
+h1 {
+    background-image: url('images/Logo.png');
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: center left;
+    font-size: 3em;
+    padding-left: 55px;
+    margin: 100px 0 25px 0;
 }
 
 h2 {
